--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "adam-paterson/oauth2-stripe",
+    "name": "audienceplayer/oauth2-stripe",
     "description": "Stripe OAuth 2.0 Client Provider for The PHP League OAuth2-Client",
     "keywords": [
         "oauth",
@@ -18,6 +18,10 @@
         {
             "name": "Adam Paterson",
             "email": "hello@adampaterson.co.uk"
+        },
+        {
+            "name": "AudiencePlayer",
+            "email": "support@audienceplayer.com"
         }
     ],
     "require": {
